--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,4 +46,8 @@
         @apply hover:font-[600] 
         
     }
+
+    .button{
+        @apply flex   items-center justify-center active:scale-[0.96]  border-[1.5px]   py-1 text-[15px]  font-medium    leading-5 
+    }
 }
